# Fastapi-Core-App

./: .gitignore  README.md  main.py  pyproject.toml  test.db
apps/book/: main.py
apps/book/factories/: book_factory.py
apps/book/gql/queries/: book_query.py
apps/book/gql/types/: book.py
apps/book/usecases/: create_book_use_case.py  get_books_use_case.py
core/: app_schema.py  apps.py  db.py  env_manager.py  exception.py  gql_context.py
core/bases/: factory.py  model.py  repo.py  use_case.py
migrations/: env.py
migrations/versions/: 03219bf2bf04_create_book_tables.py
shared/entities/: book_entity.py
shared/models/: __init__.py  application_models.py  book_models.py
shared/repositories/: book_repository.py
shared/schemas/: application_schemas.py  book_schemas.py
